# codix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-10-codix-implementation.md  2026-03-10-java-import-handling.md  2026-03-10-method-call-resolution.md  2026-03-11-inner-classes-annotations.md  2026-03-11-js-plugin.md  2026-03-11-python-plugin.md  2026-03-11-rename-symbol.md
docs/superpowers/specs/: 2026-03-10-codix-design.md  2026-03-10-java-import-handling-design.md  2026-03-10-method-call-resolution-design.md  2026-03-11-inner-classes-annotations-design.md  2026-03-11-js-plugin-design.md  2026-03-11-python-plugin-design.md  2026-03-11-rename-symbol-design.md  2026-03-11-rust-plugin-design.md
src/: main.rs  model.rs
src/cli/: mod.rs
src/engine/: config.rs  indexer.rs  mod.rs  project.rs  rename.rs
src/plugin/: mod.rs
src/plugin/go/: mod.rs
src/plugin/java/: mod.rs
src/plugin/js/: mod.rs
src/plugin/python/: mod.rs
src/plugin/rust/: mod.rs
src/store/: mod.rs  sqlite.rs
test-project/src/main/go/: app.go
test-project/src/main/java/com/bar/: UserClient.java
test-project/src/main/java/com/foo/: Person.java  Repository.java  UserService.java
test-project/src/main/js/: app.js  service.ts
test-project/src/main/python/: app.py
test-project/src/main/rust/: app.rs
tests/: integration.rs
