[package]
name = "codix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
glob-match = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
pathdiff = "0.2"
sha2 = "0.10"
hex = "0.4"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3"
